@@ -2,7 +2,6 @@ import QtQuick
 import QtQuick.Controls
 import QtQuick.Layouts
 import Qt.labs.platform
-import QtWebEngine
 import QtWebChannel
 
 import "components" as Components
